--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -105,36 +105,31 @@
                     <div class="heading purple">LINKS</div>
                     <ul>
                         <li class="project-link">
-                            <div class="link-heading">Download My Resume:</div>
-                            <div class="link-content">
+                            <div class="link-heading">
                                 <a
                                     href="https://drive.google.com/file/d/1IBNP72o4xPA6G7hoRE3AIdlO5VMOVZtb/view?usp=drive_link"
-                                    >https://drive.google.com/file/d/1IBNP72o4xPA6G7hoRE3AIdlO5VMOVZtb/view?usp=drive_link</a
+                                    ><u onclick="window.open('./Resume.pdf')"> Download Resume </u></a
                                 >
                             </div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">Foodie Project: (Currently Working on it.)</div>
-                            <div class="link-content">
-                                <a href="https://github.com/DharmilVirani/foodie.git">
-                                    https://github.com/DharmilVirani/foodie.git
-                                </a>
+                            <div class="link-heading">
+                                Foodie Project (Currently Working on it.) :
+                                <a href="https://github.com/DharmilVirani/foodie.git"> <u>Click Here</u> </a>
                             </div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">Hospital Management System</div>
-                            <div class="link-content">
+                            <div class="link-heading">
+                                Hospital Management System :
                                 <a href="https://github.com/DharmilVirani/Hospital-Management-System.git">
-                                    https://github.com/DharmilVirani/Hospital-Management-System.git
+                                    <u>Click Here</u>
                                 </a>
                             </div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">Notes App:</div>
-                            <div class="link-content">
-                                <a href="https://github.com/DharmilVirani/note-app.git">
-                                    https://github.com/DharmilVirani/note-app.git
-                                </a>
+                            <div class="link-heading">
+                                Notes App :
+                                <a href="https://github.com/DharmilVirani/note-app.git"> <u>Click Here</u></a>
                             </div>
                         </li>
                     </ul>
@@ -146,58 +141,58 @@
                     <div class="heading purple">ACHIEVEMENTS & CERTIFICATES</div>
                     <ul>
                         <li class="project-link">
-                            <div class="link-heading">CCNAv7: Introduction to Networks:</div>
-                            <div class="link-content">
+                            <div class="link-heading">
+                                CCNAv7: Introduction to Networks :
                                 <a
                                     href="https://drive.google.com/file/d/1tlo86MdZjfzWPaVlEuxBYMlRqhgVA9fV/view?usp=drive_link"
                                 >
-                                    https://drive.google.com/file/d/1tlo86MdZjfzWPaVlEuxBYMlRqhgVA9fV/view?usp=drive_link
+                                    <u>Click Here</u>
                                 </a>
                             </div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">CCNAv7: Switching, Routing, and Wireless Essentials:</div>
-                            <div class="link-content">
+                            <div class="link-heading">
+                                CCNAv7: Switching, Routing, and Wireless Essentials :
                                 <a
                                     href="https://drive.google.com/file/d/1Dvy6m7iXrQEXbZ84UH8VfeLcbDoqzOii/view?usp=drive_link"
                                 >
-                                    https://drive.google.com/file/d/1Dvy6m7iXrQEXbZ84UH8VfeLcbDoqzOii/view?usp=drive_link
+                                    <u>Click Here</u>
                                 </a>
                             </div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">NDG: Linux Essentials:</div>
-                            <div class="link-content">
+                            <div class="link-heading">
+                                NDG: Linux Essentials :
                                 <a
                                     href="https://drive.google.com/file/d/1tBpY4YAv52rZvPUxSFiN-Mu-xl_IPYRc/view?usp=drive_link"
-                                    >https://drive.google.com/file/d/1tBpY4YAv52rZvPUxSFiN-Mu-xl_IPYRc/view?usp=drive_link</a
+                                    ><u>Click Here</u></a
                                 >
                             </div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">Math Cross Puzzle (Participation Certificate)</div>
-                            <div class="link-content">
+                            <div class="link-heading">
+                                Math Cross Puzzle (Participation Certificate) :
                                 <a
                                     href="https://drive.google.com/file/d/1O4OxzHXbJKWwlzU77VHJPccOyfnY4Vj2/view?usp=drive_link"
-                                    >https://drive.google.com/file/d/1O4OxzHXbJKWwlzU77VHJPccOyfnY4Vj2/view?usp=drive_link</a
+                                    ><u>Click Here</u></a
                                 >
                             </div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">Energy Literature Program:</div>
-                            <div class="link-content">
+                            <div class="link-heading">
+                                Energy Literature Program :
                                 <a
                                     href="https://drive.google.com/file/d/1YOvZ8Wc2j8Sn1yQwQdQIVxp2AhbWo8ig/view?usp=drive_link"
-                                    >https://drive.google.com/file/d/1YOvZ8Wc2j8Sn1yQwQdQIVxp2AhbWo8ig/view?usp=drive_link</a
+                                    ><u>Click Here</u></a
                                 >
                             </div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">Poster Presentation on "Save Energy Save Planet"</div>
-                            <div class="link-content">
+                            <div class="link-heading">
+                                Poster Presentation on "Save Energy Save Planet" :
                                 <a
                                     href="https://drive.google.com/file/d/1HRldtdeBd44n_qRkX51xFgncS9OH6TAF/view?usp=drive_link"
-                                    >https://drive.google.com/file/d/1HRldtdeBd44n_qRkX51xFgncS9OH6TAF/view?usp=drive_link</a
+                                    ><u>Click Here</u></a
                                 >
                             </div>
                         </li>
@@ -210,19 +205,15 @@
                     <div class="heading purple">CONTACT</div>
                     <ul>
                         <li class="project-link">
-                            <div class="link-heading">Contact Number:</div>
-                            <div class="link-content">9624919800</div>
+                            <div class="link-heading">Contact Number : 9624919800</div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">Email:</div>
-                            <div class="link-content">dharmilvirani@gmail.com</div>
+                            <div class="link-heading">Email : dharmilvirani@gmail.com</div>
                         </li>
                         <li class="project-link">
-                            <div class="link-heading">LinkedIN:</div>
-                            <div class="link-content">
-                                <a href="https://www.linkedin.com/in/dharmil-virani-07937426a"
-                                    >https://www.linkedin.com/in/dharmil-virani-07937426a</a
-                                >
+                            <div class="link-heading">
+                                LinkedIN :
+                                <a href="https://www.linkedin.com/in/dharmil-virani-07937426a"><u>Click Here</u></a>
                             </div>
                         </li>
                     </ul>
